# deepseek-client-python

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
deepseek_client/: client.py
examples/: basic_usage.py
